--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - ./app:/myapp/app:delegated
       - ./package.json:/myapp/package.json:delegated
       - ./yarn.lock:/myapp/yarn.lock:delegated
+      - ./webpack.config.js:/myapp/webpack.config.js
       - node_modules:/myapp/node_modules
 volumes:
   node_modules:
