--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
 {
-
+  "scripts": {
+    "build-watch": "webpack --progress --watch"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13"
+  }
 }
