--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@babel/preset-env": "^7.0.0-beta.42",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13"
   }
