--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
   "presets": [
-    ["env", "react", {
+    ["@babel/preset-env", {
       "targets": {
         "browsers": ["last 2 versions"]
       },
       "modules": false
-    }]
+    }],
+    "@babel/react"
   ]
 }
