--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "build-watch": "webpack --progress --watch"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.0.0-beta.42",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-react": "^6.24.1",
+    "@babel/preset-react": "^7.0.0-beta.42",
+    "babel-loader": "^8.0.0-beta",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "webpack": "^4.4.1",
